@@ -31,6 +31,7 @@ our @EXPORT_OK = qw(
                      is_frobenius_underwood_pseudoprime
                      is_mersenne_prime
                      is_llr_prime
+                     is_proth_prime
                      miller_rabin_random
                      lucas_sequence  lucasu  lucasv
                      primes
@@ -168,7 +169,7 @@ __END__
 
 =encoding utf8
 
-=for stopwords Möbius Deléglise Bézout gcdext vecsum vecprod moebius totient liouville znorder znprimroot bernfrac harmfrac stirling lucasu lucasv OpenPFGW gmpy2
+=for stopwords Möbius Deléglise Bézout gcdext vecsum vecprod moebius totient liouville znorder znprimroot bernfrac harmfrac harmreal stirling lucasu lucasv OpenPFGW gmpy2 nonresidue
 
 =head1 NAME
 
@@ -593,13 +594,29 @@ faster than any known general-form primality proof methods.
 
 Takes a positive number C<n> as input and returns one of: 0 (definitely
 composite), 2 (definitely prime), or -1 (test does not indicate anything).
-This implements a partial version of the Lucas-Lehmer-Riesel test for
+This implements the Lucas-Lehmer-Riesel test for
 fast deterministic primality testing on numbers of the form C<k * 2^n - 1>.
 If C<k = 1> then this is a Mersenne number and the Lucas-Lehmer test is used.
 If the number is not of this form, or if C<k E<lt>= 2^n>, then C<-1> will
-be returned as the test does not apply.  In this implementation, some values
-of C<k> are not solved, so they will also return C<-1>.  Otherwise, the LLR
+be returned as the test does not apply.
+Otherwise, the LLR
 test is performed.  While not as fast as the Lucas-Lehmer test for Mersenne
+numbers, it is almost as fast as a single strong pseudoprime test (i.e.
+Miller-Rabin test) while giving a certain answer.
+
+=head2 is_proth_prime
+
+Takes a positive number C<n> as input and returns one of: 0 (definitely
+composite), 2 (definitely prime), or -1 (test does not indicate anything).
+This applies Proth's theorem for fast Las Vegas
+primality testing on numbers of the form C<k * 2^n + 1>.
+If the number is not of this form, or if C<k E<lt>= 2^n>, then C<-1> will
+be returned as the test does not apply.
+Otherwise, a search is performed to find a quadratic nonresidue modulo C<n>.
+If none can be found after a brief search, C<-1> is returned as no conclusion
+can be reached.  Otherwise, Proth's theorem is checked which conclusively
+indicates primality.
+While not as fast as the Lucas-Lehmer test for Mersenne
 numbers, it is almost as fast as a single strong pseudoprime test (i.e.
 Miller-Rabin test) while giving a certain answer.
 
