@@ -4,7 +4,8 @@ Revision history for Perl module Math::Prime::Util::GMP
 
     [ADDED]
 
-    - harmfrac                            returns (num,den) of Harmonic number
+    - harmfrac                  returns (num,den) of Harmonic number
+    - is_proth_prime(p)         For k*2^n+1, returns -1, 0, or 2
 
     [PERFORMANCE]
 
